--- a/index.html
+++ b/index.html
@@ -161,14 +161,10 @@ function menuFun() {
          alert('Please insert a non-null item name!')
          return;
       }
-      if (document.forms[0].price.value == ''){
-        alert('Please insert a non-null price!')
+      if (document.forms[0].price.value == ''  || document.forms[0].price.value <= 0){
+        alert('Please insert a numeric value for the price!')
         return;
-      }
-      if (document.forms[0].price.value <= 0) {
-         alert('Please insert a non-negative price value!')
-         return;
-      }
+     
     
 /* If the category does not exist in productObject, it is created with price=0, and added */
      if (!productObject[cat]) {
