--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
 	<!-- Creating the pre-defined categories-->
 	  Category: <select name="cat">
 	  	<option id="clothes">clothes</option>
-	  	  <option id="food">food</option>
-         <option id="transport">transport</option>
-          <option id="others">others</option>
+	  	 <option id="food">food</option>
+         	   <option id="transport">transport</option>
+         	    <option id="furniture">others</option>
+         	     <option id="electronic devices">others</option>
+         	      <option id="leisure activities">others</option>
+                       <option id="others">others</option>
 	  	</select>
 	  	  Item Name: <input type="text" name="name">
 	  	  Price: <input type="number" name="price" size="5">
