--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 	  	<option id="clothes">clothes</option>
 	  	 <option id="food">food</option>
          	   <option id="transport">transport</option>
-         	    <option id="furniture">others</option>
-         	     <option id="electronic devices">others</option>
-         	      <option id="leisure activities">others</option>
+         	    <option id="furniture">furniture</option>
+         	     <option id="electronic devices">electronic devices</option>
+         	      <option id="leisure activities">leisure activities</option>
                        <option id="others">others</option>
 	  	</select>
 	  	  Item Name: <input type="text" name="name">
