--- a/contact.html
+++ b/contact.html
@@ -44,30 +44,9 @@
 <div class="content"> 
 
 
-  <div class="calculator">
-  <p>chs chbsbdc hsbjshbcs jh</p>
-  <form style="display:inline;">
-	<!-- Creating the pre-defined categories-->
-	  Category: <select name="cat">
-	  	<option id="clothes">clothes</option>
-	  	 <option id="food">food</option>
-         	   <option id="transport">transport</option>
-         	    <option id="furniture">furniture</option>
-         	     <option id="electronic devices">electronic devices</option>
-         	      <option id="leisure activities">leisure activities</option>
-                       <option id="others">others</option>
-	  	</select>
-	  	  Item Name: <input type="text" name="name">
-	  	  Price: <input type="number" name="price" size="5">
-  </form>
-  	<button onCLick="doChart()">Add</button>
-	  <button onCLick="resetChart();">Reset</button>
-	
-  </div>
- 
-  <div id="chart"></div>
-   <ul id="list"></ul><br>
- <div id="total"></div><br>
+contact
+
+
 
 </div>
  <div class="footer">
