--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
 <div class="menu">
 <ul class="topnav">
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><a href="about.html">About</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
   <li class="icon">
     <a href="javascript:void(0);" style="font-size:15px;" onclick="menuFun()">☰</a>
   </li>
@@ -43,10 +43,33 @@
 
 <div class="content"> 
 
+<h1>Your opinion matters! </h1>
+<p>Any questions, suggestions or ideas are welcome! Feel free to contact me by filling the form below or sending an <a  href="mailto:ioana.andreea.raducanu@estudiant.upc.edu">email</a>.</p>
 
-contact
+<form>
+  <fieldset>
+    <legend>Personal information:</legend>
+    First name:<br>
+    <input type="text" name="firstname">
+    <br>
+    Last name:<br>
+    <input type="text" name="lastname">
+    <br><br>
+  </fieldset>
 
+  <fieldset>
+    <legend>Did you find the page useful?</legend>
+    <input type="radio" name="useful" value="Yes"> Yes<br>
+    <input type="radio" name="useful" value="No"> No<br>
+  </fieldset>
 
+  <fieldset>
+    <legend>Message:</legend>
+    <textarea name="message" cols="50" rows="10"></textarea><br>
+    <button class="button">Submit</button>
+  </fieldset>
+</form>
+<br><br>
 
 </div>
  <div class="footer">
