--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 <h1>Your opinion matters! </h1>
 <p>Any questions, suggestions or ideas are welcome! Feel free to contact me by filling the form below or sending an <a  href="mailto:ioana.andreea.raducanu@estudiant.upc.edu">email</a>.</p>
 
-<form>
+<form method="post"  onsubmit="return sendMail()" name="contact" action="mailto:andreea@gmail.com">
   <fieldset>
     <legend>Personal information:</legend>
     First name:<br>
