--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div class="calculator">
   <p>Pick a category, enter your items and prices, click <i>Add</i> and start creating your expenses chart!</p>
-  <form style="display:inline;">
+  <form name="calculator" style="display:inline;">
   <!-- Creating the pre-defined categories-->
     Category: <select name="cat">
       <option id="clothes">clothes</option>
