About page and contact form validation

--- a/about.html
+++ b/about.html
@@ -43,8 +43,14 @@
 
 <div class="content"> 
 
-
-about
+<h1><a id="About_Expense_Calculator_0"></a>About <em>Expense Calculator</em></h1>
+<p><em>Expense Calculator</em> is a tool designed to help you visualize your expenses by category, by displaying them in a pie chart.</p>
+<p>To begin, select a category from the drop-down menu and start adding items belonging to that category, together with their prices. For instance, you can choose <em>Leisure Activities</em> and add several activities and how much you spent on each of them. There are some pre-defined categories from which you can choose, but if your expenses do not fit in any of them, you can select <em>Others</em>. As you add items, a list of their names and prices is created and displayed, along with the total for all the items.</p>
+<p>Here is an example of a possible chart:</p>
+<img src='example.png'>
+<p>It really adds colour to your expenses!</p>
+<h2>Behind the scenes</h2>
+<p><em>Expense Calculator</em> was created using the <em>Chartist</em> JavaScript library. Easy to use and accessible to anyone, it is a charting library that can generate simple, responsive charts. More information can be found on their official <a href='https://gionkunz.github.io/chartist-js/'>webpage</a>, in addition to other examples, chart types and documentation.</p>
 
 
 
