--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
     Category: <select name="cat">
       <option id="clothes">clothes</option>
        <option id="food">food</option>
+         <option id="rent">rent</option>
+           <option id="bills">bills</option>
              <option id="transport">transport</option>
               <option id="furniture">furniture</option>
                <option id="electronic devices">electronic devices</option>
                 <option id="leisure activities">leisure activities</option>
-                       <option id="others">others</option>
+                    <option id="others">others</option>
       </select>
         Item: <input type="text" name="name">
         Price: <input type="number" name="price" size="5">
@@ -64,12 +66,13 @@
     <button class="button" onCLick="resetChart();">Reset</button>
   
   </div>
- 
+ <br>
   <div id="chart"></div>
    <ul id="list"></ul><br>
  <div id="total"></div><br>
 
 </div>
+<br>
  <div class="footer">
     "Expense Calculator" is a project created by Andreea Raducanu. &copy; 2016.
 </div>    
