--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <meta name="author" content="Expense Calculator">
 
 <!-- Loading chartist library, both CSS and JavaScript files-->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
   <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
 <!-- Loading Google fonts -->
   <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
+
+  <link rel="icon" href="favicon.png" type="image/png">
+
 </head>
 
 <body>
