--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
 <!-- Loading Google fonts -->
   <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
+
+  <link rel="icon" href="favicon.png" type="image/png">
+
 </head>
 
 <body>
