--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,10 @@
 <!-- Loading Google fonts -->
   <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
+
+ <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+ 
 </head>
 
 <body>
@@ -44,7 +48,7 @@
 <div class="content"> 
 
 <h1>Your opinion matters! </h1>
-<p>Any questions, suggestions or ideas are welcome! Feel free to contact me by filling the form below or sending an <a  href="mailto:ioana.andreea.raducanu@estudiant.upc.edu">email</a>.</p>
+<p>Any questions, suggestions or ideas are welcome! Feel free to contact me by filling the form below or by sending an <a  href="mailto:ioana.andreea.raducanu@estudiant.upc.edu">email</a>.</p>
 
 <form onsubmit="validate(); return false;" name="contact">
   <fieldset>
