--- a/about.html
+++ b/about.html
@@ -15,6 +15,10 @@
 <!-- Loading Google fonts -->
   <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+
 </head>
 
 <body>
