--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <!-- Loading Google fonts -->
   <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+
 </head>
 
 <body>
@@ -33,9 +37,6 @@
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
-  <li class="icon">
-    <a href="javascript:void(0);" style="font-size:15px;" onclick="menuFun()">☰</a>
-  </li>
 </ul>
 </div>
 </div>
